# prirucka2024

./: .gitignore  LICENSE  README.md  _config.yml  zapocet.md
03_whisper/: README.md  transcribe.py  transcription.txt
05_embeddings/: embdedings.py
06_chroma/: db.py
07_langchain/: chatgpt.py  template.py  text_splitter.py
08_RAG/: .gitignore  download_html.py  download_html_recursively.py  fill_chroma.py
09_RAG_CLI/: .gitignore  README.md  poetry.toml  pyproject.toml
09_RAG_CLI/src/prirucka2024/: __main__.py  download_url.py  fill_vector_store.py  pdf_parser_raw.py  rag.py  split_html_on_headers.py  split_text_recursively.py
09_RAG_CLI/tests/: test_fill_vector_store.py  test_split_html.py
92_html/: .gitignore  download_html.py  download_html_recursively.py  retriever.py  split_html_on_headers.py
prirucka2024/: .gitignore  pyproject.toml
prirucka2024/src/prirucka2024/: __main__.py  parser.py  rst_parser.py  rst_parser_00.py
prirucka2024/tests/: test_cli.py  test_parser.py  test_rst_parser.py  test_rst_parser_00.py
