[tool.poetry]
name = "prirucka2024"
version = "0.1.0"
description = ""
authors = ["Petr Zikán <zikan.p@gmail.com>"]
readme = "README.md"
packages = [{include = "prirucka2024", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
