[tool.poetry]
name = "prirucka2024"
version = "0.1.0"
description = ""
authors = ["Petr Zikán <zikan.p@gmail.com>"]
readme = "README.md"
packages = [{include = "prirucka2024", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
openai = "^1.54.4"
chromadb = "^0.5.18"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"

[tool.poetry.scripts]
prirucka2024 = "prirucka2024.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
